force-app/main/default/objects/Survey__c/fields/Account_Receivable_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Account_Receivable_Ratio__c</fullName>
    <label>Account Receivable Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>