force-app/main/default/objects/Survey__c/fields/Additional_Asset_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Additional_Asset_Insurance__c</fullName>
    <label>Additional Asset Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>