force-app/main/default/objects/Survey__c/fields/Address_Data_Company_Same_As__c.field-meta.xml
<CustomField>
    <fullName>Address_Data_Company_Same_As__c</fullName>
    <label>Address Data Company Same As?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Address</fullName>
            </value>
            <value>
                <fullName>Domicile Address</fullName>
            </value>
            <value>
                <fullName>Asset Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>