force-app/main/default/objects/Survey__c/fields/Akumulasi_Penyusutan_Gedung__c.field-meta.xml
<CustomField>
    <fullName>Akumulasi_Penyusutan_Gedung__c</fullName>
    <label>Akumulasi Penyusutan Gedung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>