force-app/main/default/objects/Survey__c/fields/Amortisasi__c.field-meta.xml
<CustomField>
    <fullName>Amortisasi__c</fullName>
    <label>Amortisasi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>