force-app/main/default/objects/Survey__c/fields/AO_Datang_ke_lokasi_usaha__c.field-meta.xml
<CustomField>
    <fullName>AO_Datang_ke_lokasi_usaha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AO Datang ke lokasi usaha?</label>
    <type>Checkbox</type>
</CustomField>