force-app/main/default/objects/Survey__c/fields/AO_Datang_ke_lokasi_usaha_spouse_New__c.field-meta.xml
<CustomField>
    <fullName>AO_Datang_ke_lokasi_usaha_spouse_New__c</fullName>
    <label>AO Datang ke lokasi usaha spouse New?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>