force-app/main/default/objects/Survey__c/fields/Application_UUID__c.field-meta.xml
<CustomField>
    <fullName>Application_UUID__c</fullName>
    <label>Application UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>