force-app/main/default/objects/Survey__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Status</label>
    <referenceTo>Asset_Status__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>