force-app/main/default/objects/Survey__c/fields/Beban_Pajak__c.field-meta.xml
<CustomField>
    <fullName>Beban_Pajak__c</fullName>
    <label>Beban Pajak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>