force-app/main/default/objects/Survey__c/fields/Biaya_dibayar_dimuka__c.field-meta.xml
<CustomField>
    <fullName>Biaya_dibayar_dimuka__c</fullName>
    <label>Biaya dibayar dimuka</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>