force-app/main/default/objects/Survey__c/fields/Biaya_yang_masih_harus_dibayar__c.field-meta.xml
<CustomField>
    <fullName>Biaya_yang_masih_harus_dibayar__c</fullName>
    <label>Biaya yang masih harus dibayar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>