force-app/main/default/objects/Survey__c/fields/Button_Selanjutnya_Is_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Button_Selanjutnya_Is_Clicked__c</fullName>
    <label>Button Selanjutnya Is Clicked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>