force-app/main/default/objects/Survey__c/fields/Calc_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Calc_Tenor__c</fullName>
    <label>Calc Tenor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>