force-app/main/default/objects/Survey__c/fields/Company_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Company_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Kelurahan</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Company Kelurahan)</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>