force-app/main/default/objects/Survey__c/fields/Company_RT__c.field-meta.xml
<CustomField>
    <fullName>Company_RT__c</fullName>
    <label>Company RT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>