force-app/main/default/objects/Survey__c/fields/Company_RW__c.field-meta.xml
<CustomField>
    <fullName>Company_RW__c</fullName>
    <label>Company RW</label>
    <length>10</length>
    <type>Text</type>
</CustomField>