force-app/main/default/objects/Survey__c/fields/Credit_Checking_Count__c.field-meta.xml
<CustomField>
    <fullName>Credit_Checking_Count__c</fullName>
    <label>Credit Checking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>