force-app/main/default/objects/Survey__c/fields/Current_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio__c</fullName>
    <label>Current Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>