force-app/main/default/objects/Survey__c/fields/customer_bank_account__c.field-meta.xml
<CustomField>
    <fullName>customer_bank_account__c</fullName>
    <label>customer_bank_account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>