force-app/main/default/objects/Survey__c/fields/Customer_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bank_Account_Number__c</fullName>
    <label>Customer Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>