force-app/main/default/objects/Survey__c/fields/customer_bank_id__c.field-meta.xml
<CustomField>
    <fullName>customer_bank_id__c</fullName>
    <label>customer_bank_id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>