force-app/main/default/objects/Survey__c/fields/Customer_CIF__c.field-meta.xml
<CustomField>
    <fullName>Customer_CIF__c</fullName>
    <formula>Opportunity__r.Primary_Contact__r.customer_cif_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer CIF</label>
    <type>Text</type>
</CustomField>