force-app/main/default/objects/Survey__c/fields/Customer_Personal_Job_HPP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Personal_Job_HPP__c</fullName>
    <label>HPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>