force-app/main/default/objects/Survey__c/fields/Customer_Personal_Job_NetIncomePerBulan__c.field-meta.xml
<CustomField>
    <fullName>Customer_Personal_Job_NetIncomePerBulan__c</fullName>
    <label>Net Income Per Bulan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>