force-app/main/default/objects/Survey__c/fields/Days_APR__c.field-meta.xml
<CustomField>
    <fullName>Days_APR__c</fullName>
    <label>Days APR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>