force-app/main/default/objects/Survey__c/fields/Days_ARR__c.field-meta.xml
<CustomField>
    <fullName>Days_ARR__c</fullName>
    <label>Days ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>