force-app/main/default/objects/Survey__c/fields/Days_INV__c.field-meta.xml
<CustomField>
    <fullName>Days_INV__c</fullName>
    <label>Days INV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>