force-app/main/default/objects/Survey__c/fields/Debt_to_Equity_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Equity_Ratio__c</fullName>
    <label>Debt to Equity Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>