force-app/main/default/objects/Survey__c/fields/DER__c.field-meta.xml
<CustomField>
    <fullName>DER__c</fullName>
    <label>DER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>