force-app/main/default/objects/Survey__c/fields/DSC__c.field-meta.xml
<CustomField>
    <fullName>DSC__c</fullName>
    <description>Decimal 2</description>
    <label>DSC</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>