force-app/main/default/objects/Survey__c/fields/Emergency_Contact_City_Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_City_Kabupaten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City/Kabupaten</label>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>