force-app/main/default/objects/Survey__c/fields/Emergency_Contact_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kelurahan</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>