force-app/main/default/objects/Survey__c/fields/Emergency_Contact_Phone_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_Number_1__c</fullName>
    <label>Phone Number 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>