force-app/main/default/objects/Survey__c/fields/Emergency_Contact_Province__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>