force-app/main/default/objects/Survey__c/fields/Emergency_Contact_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relation__c</fullName>
    <label>Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>