force-app/main/default/objects/Survey__c/fields/Emergency_Contact_Relationship_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Contact Relationship Lookup</label>
    <referenceTo>Master_Relationship__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>