force-app/main/default/objects/Survey__c/fields/Emergency_Contact_RW__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_RW__c</fullName>
    <label>RW</label>
    <length>16</length>
    <type>Text</type>
</CustomField>