force-app/main/default/objects/Survey__c/fields/Estimasi_Harga_Pembanding_2__c.field-meta.xml
<CustomField>
    <fullName>Estimasi_Harga_Pembanding_2__c</fullName>
    <label>Estimasi Harga Pembanding 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>