force-app/main/default/objects/Survey__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <label>Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>