force-app/main/default/objects/Survey__c/fields/Exposure_Real__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Real__c</fullName>
    <label>Exposure Real</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>