force-app/main/default/objects/Survey__c/fields/First_Installment__c.field-meta.xml
<CustomField>
    <fullName>First_Installment__c</fullName>
    <description>First Installment</description>
    <label>First Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>