force-app/main/default/objects/Survey__c/fields/Gedung__c.field-meta.xml
<CustomField>
    <fullName>Gedung__c</fullName>
    <label>Gedung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>