force-app/main/default/objects/Survey__c/fields/Has_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Has_Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Guarantor</label>
    <type>Checkbox</type>
</CustomField>