force-app/main/default/objects/Survey__c/fields/Hold_Angsuran__c.field-meta.xml
<CustomField>
    <fullName>Hold_Angsuran__c</fullName>
    <label>Hold Angsuran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>