force-app/main/default/objects/Survey__c/fields/Home_Location__c.field-meta.xml
<CustomField>
    <fullName>Home_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Location</label>
    <referenceTo>Home_Location__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>