force-app/main/default/objects/Survey__c/fields/Home_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Status</label>
    <referenceTo>Home_Status__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>