force-app/main/default/objects/Survey__c/fields/Hutang_Pajak__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Pajak__c</fullName>
    <label>Hutang Pajak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>