force-app/main/default/objects/Survey__c/fields/ID_Number_Seller__c.field-meta.xml
<CustomField>
    <fullName>ID_Number_Seller__c</fullName>
    <label>ID Number Seller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>