force-app/main/default/objects/Survey__c/fields/Input_Survey_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Input_Survey_Completion_Date__c</fullName>
    <label>Input Survey Completion Date</label>
    <type>DateTime</type>
</CustomField>