force-app/main/default/objects/Survey__c/fields/Installment_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Installment_Scheme__c</fullName>
    <label>Installment Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Fixed</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
            <value>
                <fullName>Step Up Step Down</fullName>
            </value>
            <value>
                <fullName>Even Principal</fullName>
            </value>
            <value>
                <fullName>Floating Rate</fullName>
            </value>
            <value>
                <fullName>Flexible Installment Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>