force-app/main/default/objects/Survey__c/fields/Is_From_LMS__c.field-meta.xml
<CustomField>
    <fullName>Is_From_LMS__c</fullName>
    <formula>Opportunity__r.Is_From_LMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is From LMS</label>
    <type>Checkbox</type>
</CustomField>