force-app/main/default/objects/Survey__c/fields/Is_Potong_Funding__c.field-meta.xml
<CustomField>
    <fullName>Is_Potong_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Potong Funding?</label>
    <type>Checkbox</type>
</CustomField>