force-app/main/default/objects/Survey__c/fields/IsAgreementReseted__c.field-meta.xml
<CustomField>
    <fullName>IsAgreementReseted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAgreementReseted</label>
    <type>Checkbox</type>
</CustomField>