force-app/main/default/objects/Survey__c/fields/IsReturnCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsReturnCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReturnCompleted</label>
    <type>Checkbox</type>
</CustomField>