force-app/main/default/objects/Survey__c/fields/IsVRByPassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRByPassed__c</fullName>
    <formula>BLANKVALUE(ValidationBypassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRByPassed</label>
    <type>Checkbox</type>
</CustomField>