force-app/main/default/objects/Survey__c/fields/Jenis_Pengadaan__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Pengadaan__c</fullName>
    <label>Jenis Pengadaan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BARANG</fullName>
            </value>
            <value>
                <fullName>JASA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>