force-app/main/default/objects/Survey__c/fields/Jenis_tempat_usaha__c.field-meta.xml
<CustomField>
    <fullName>Jenis_tempat_usaha__c</fullName>
    <label>Jenis tempat usaha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jenis_tempat_usaha</valueSetName>
    </valueSet>
</CustomField>