force-app/main/default/objects/Survey__c/fields/Job_Kecamatan__c.field-meta.xml
<CustomField>
    <fullName>Job_Kecamatan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Kecamatan</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Job Kecamatan)</relationshipLabel>
    <relationshipName>Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>