force-app/main/default/objects/Survey__c/fields/Job_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Job_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Kelurahan</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Job Kelurahan)</relationshipLabel>
    <relationshipName>Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>