force-app/main/default/objects/Survey__c/fields/Job_Map__c.field-meta.xml
<CustomField>
    <fullName>Job_Map__c</fullName>
    <label>Job Map</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>