force-app/main/default/objects/Survey__c/fields/Job_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Map_URL__c</fullName>
    <label>Job Map URL</label>
    <type>Url</type>
</CustomField>