force-app/main/default/objects/Survey__c/fields/Job_RT__c.field-meta.xml
<CustomField>
    <fullName>Job_RT__c</fullName>
    <label>RT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>