force-app/main/default/objects/Survey__c/fields/Job_RW__c.field-meta.xml
<CustomField>
    <fullName>Job_RW__c</fullName>
    <label>RW</label>
    <length>10</length>
    <type>Text</type>
</CustomField>