force-app/main/default/objects/Survey__c/fields/Jumlah_lantai_bangunan__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_lantai_bangunan__c</fullName>
    <label>Jumlah lantai bangunan</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>