force-app/main/default/objects/Survey__c/fields/Jumlah_Tanggungan_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Tanggungan_Lainnya__c</fullName>
    <label>Jumlah Tanggungan (Lainnya)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>