force-app/main/default/objects/Survey__c/fields/Jumlah_Tanggungan_Pasangan_dan_Anak__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Tanggungan_Pasangan_dan_Anak__c</fullName>
    <label>Jumlah Tanggungan (Pasangan dan Anak)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>