force-app/main/default/objects/Survey__c/fields/Keberadaan_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Keberadaan_Sertipikat__c</fullName>
    <label>Keberadaan Sertipikat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Hand Customer</fullName>
            </value>
            <value>
                <fullName>On Hand di Bank TO</fullName>
            </value>
            <value>
                <fullName>On Hand Masih HT</fullName>
            </value>
            <value>
                <fullName>On Hand di BFI</fullName>
            </value>
            <value>
                <fullName>On Hand di Cabang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>