force-app/main/default/objects/Survey__c/fields/Kelurahan_Seller__c.field-meta.xml
<CustomField>
    <fullName>Kelurahan_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kelurahan Seller</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Kelurahan Seller)</relationshipLabel>
    <relationshipName>Surveys4</relationshipName>
    <type>Lookup</type>
</CustomField>