force-app/main/default/objects/Survey__c/fields/Kepemilikan_Asset_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Kepemilikan_Asset_Lainnya__c</fullName>
    <label>Kepemilikan Asset Lainnya</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rumah</fullName>
            </value>
            <value>
                <fullName>Ruko/Kios</fullName>
            </value>
            <value>
                <fullName>Apartemen</fullName>
            </value>
            <value>
                <fullName>Kendaraan Pribadi</fullName>
            </value>
            <value>
                <fullName>Kendaraan Operasional</fullName>
            </value>
            <value>
                <fullName>Mesin Produksi</fullName>
            </value>
            <value>
                <fullName>Gudang</fullName>
            </value>
            <value>
                <fullName>Tanah</fullName>
            </value>
            <value>
                <fullName>Aset Lainnya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>