force-app/main/default/objects/Survey__c/fields/Kepemilikan_usaha__c.field-meta.xml
<CustomField>
    <fullName>Kepemilikan_usaha__c</fullName>
    <label>Kepemilikan usaha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Kepemilikan_usaha</valueSetName>
    </valueSet>
</CustomField>