force-app/main/default/objects/Survey__c/fields/KJPP_LTV__c.field-meta.xml
<CustomField>
    <fullName>KJPP_LTV__c</fullName>
    <description>change Nilai_Pasar__c  to Opportunity__r.Market_Price_Estimation__c</description>
    <formula>Opportunity__r.NTF_Pengajuan__c /  Opportunity__r.Market_Price_Estimation__c   /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>