force-app/main/default/objects/Survey__c/fields/KJPP_Warn_60percent__c.field-meta.xml
<CustomField>
    <fullName>KJPP_Warn_60percent__c</fullName>
    <formula>IF(KJPP_LTV__c*100 &gt; 60/100 ,
 &quot;LTV-Over&quot;, 
 &quot;&quot;
)</formula>
    <label>[KJPP] warn60</label>
    <type>Text</type>
</CustomField>