force-app/main/default/objects/Survey__c/fields/Komite_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Komite_Approved_Date__c</fullName>
    <label>Komite Approved Date</label>
    <type>DateTime</type>
</CustomField>