force-app/main/default/objects/Survey__c/fields/Kondisi_IMB__c.field-meta.xml
<CustomField>
    <fullName>Kondisi_IMB__c</fullName>
    <label>Kondisi IMB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ada</fullName>
            </value>
            <value>
                <fullName>Tidak ada</fullName>
            </value>
            <value>
                <fullName>Revisi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>