force-app/main/default/objects/Survey__c/fields/Kondisi_Jaminan__c.field-meta.xml
<CustomField>
    <fullName>Kondisi_Jaminan__c</fullName>
    <label>Kondisi Jaminan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kondisi Permanen</fullName>
            </value>
            <value>
                <fullName>Kondisi Non Permanen</fullName>
            </value>
            <value>
                <fullName>Kondisi Rusak</fullName>
            </value>
            <value>
                <fullName>Kondisi Dalam Renovasi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>