force-app/main/default/objects/Survey__c/fields/Laba_Kotor__c.field-meta.xml
<CustomField>
    <fullName>Laba_Kotor__c</fullName>
    <label>Laba Kotor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>